Bug 103487 - Leak when updating ActUser
Summary: Leak when updating ActUser
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-27 17:09 UTC by Carlos Garnacho Parro
Modified: 2017-10-27 17:25 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch (1018 bytes, patch)
2017-10-27 17:12 UTC, Carlos Garnacho Parro
Details | Splinter Review

Description Carlos Garnacho Parro 2017-10-27 17:09:40 UTC
Whenever the ActUser is updated from another ActUser instance, the old login_history GVariant is leaked. This doesn't happen often, but the size of the leaked variant makes it rather noticeable (I see ~300KB leaked this way during gnome-shell startup).

I'm attaching a patch that fixes this.
Comment 1 Carlos Garnacho Parro 2017-10-27 17:12:14 UTC
Created attachment 135113 [details] [review]
Patch
Comment 2 Ray Strode [halfline] 2017-10-27 17:25:20 UTC
thanks pushed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.