lib: Plug leak

When updating the user, the previous login_history variant would
be leaked.

https://bugs.freedesktop.org/show_bug.cgi?id=103487